[package]

name = "elitetrader"
version = "1.0.0"
authors = [ "Austin Jones <austinbaysjones@gmail.com>" ]

[dependencies]
rand = "0.3.12"
time = "0.1.34"
num = "0.1.29"

num_cpus = "0.2.10"
crossbeam = "0.2.0"

hyper = "0.7.2"

getopts = "0.2.14"

flate2 = "0.2.11"

rustc-serialize = "0.3"
csv = "0.14.3"
spatial = { git = "https://github.com/austinjones/spatial.git" }

filetime = "0.1.9"
statistical = "0.1.1"

[[bin]]
name = "elite_trader"