[package]
name = "elitetrader"
version = "1.0.0"
authors = [ "Austin Jones <austinbaysjones@gmail.com>" ]
edition = "2018"

[dependencies]
rand = "0.7.3"
time = "0.2.16"
num = "0.3.0"

num_cpus = "1.13.0"
crossbeam = "0.7.3"

reqwest = { version = "0.10.6", features = ["default-tls", "blocking", "gzip"] }

getopts = "0.2.21"

flate2 = "1.0.14"

csv = "1.1.3"
spatial = { git = "https://github.com/austinjones/spatial.git" }

filetime = "0.2.10"
statistical = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "elite_trader"
path = "src/main.rs"

[profile.release]
debug = true